--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ click = "^8.1.8"
 requests = "^2.32.3"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^25.1.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
